fix footer padding and alignment

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -466,7 +466,7 @@ article img {
 
     .footer-content {
         background-color: rgba(255,255,255,0.8);
-        padding: 20% 10%;
+        padding: 5%;
         border-radius: 12px;
         width: max-content;
         @media (max-width: $breakpoint-md) {
